# email4hermes

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/email_assistant/: main.py  schemas.py
src/email_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/email_assistant/api/routes/: auth.py  emails.py  meetings.py
src/email_assistant/core/: config.py  container.py
src/email_assistant/integrations/: google.py
src/email_assistant/services/: email.py  meetings.py  reply.py
tests/: test_api.py  test_google_auth_routes.py  test_google_oauth.py
